Fix mobile homepage
Resized logo on homepage to not be offscreen on mobile

--- a/style.css
+++ b/style.css
@@ -150,16 +150,17 @@ body{
     top:20%; bottom:50%; left:25%; right:25%;
     margin:auto;
     display:block;
+    width:40%;
 }
 .subtitle{      /* title below logo, concise descriptor of me */
     position:absolute;
-    top:55%; bottom:50%; left:25%; right:25%;
+    top:50%; bottom:50%; left:25%; right:25%;
     color:white;
     font-size: 5vh;
     font-family:serif;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     text-align:center;
-    /*margin-top:20%;*/
+    margin-top:1vh;
 }
 
 /* About Me Page */
@@ -226,6 +227,14 @@ body{
     .content{
         margin-left:0;
         margin-right:0;
+    }
+    
+    .homeLogo{      /* BIG logo on homepage */
+        width:90%;
+        top:20%; bottom:50%; left:0; right:0;
+    }
+    .subtitle{      /* title below logo, concise descriptor of me */
+        top:50%; bottom:50%; left:0; right:0;
     }
     
     .headshot{
